Fix icon & text alignment in proposal status

--- a/app/assets/stylesheets/modules/shared/email_status.scss
+++ b/app/assets/stylesheets/modules/shared/email_status.scss
@@ -65,12 +65,14 @@
 
     img {
       float: left;
+      position: relative;
+      top: 5px;
     }
 
     .approver {
       padding-left: 7px;
       position: relative;
-      top: -5px;
     }
+
   }
 }
